fix "both frames are visible" issue

--- a/task_11/css/style.css
+++ b/task_11/css/style.css
@@ -344,13 +344,28 @@ p {
   width: 25%;
 }
 
-.image-radio p {
-  padding-bottom: 12px;
+.wrapper {
+  position: relative;
+  z-index: 1;
+  background: #f7f7fa;
+  border-radius: 6px;
+}
+
+.wrapper:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 0;
+  border-radius: 5px;
+  border: 1px solid #d7d9e0;
 }
 
 .tile {
-  width: 48%;
-  padding: 18px 0 0 0;
+  width: 100%;
+  border-radius: 6px;
 }
 
 .step-styled {
@@ -534,24 +549,17 @@ p {
   opacity: 0.7;
 }
 
-.image-radio, .wrapper {
-  border: 1px solid #d7d9e0;
-  border-radius: 5px;
-}
-
 /* Styles for checked borders (new - from lecture) */
 
 .select-wrapper {
   position: relative;
-  z-index: 1;
-  border-radius: 3px;
-  background: #f7f7fa;
+  z-index: 3;
+  border-radius: 5px;
   cursor: pointer;
   color: #a5abc5;
   border: 4px solid transparent;
   font-size: 10pt;
   font-weight: bold;
-  padding: 3px 3px 3px 3px;
 }
 
 .select-wrapper:hover {
@@ -571,7 +579,7 @@ input[type="radio"]:checked + .select-wrapper:after {
   right: -6px;
   color: #76a7e1;
   font-size: 18pt;
-  z-index: 2;
+  z-index: 4;
   background-color: #ffffff;
   line-height: 10pt;
 }
